# yt-dlp-tldv

./: .gitignore  LICENSE  README.md  pyproject.toml
yt_dlp_plugins/extractor/: tldv.py
